--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.25.0",
     "eslint-plugin-qwik": "0.11.0",
     "node-fetch": "3.2.10",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4",
