--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
@@ -24,9 +25,10 @@
     "@builder.io/qwik-city": "0.0.112",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
-    "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "eslint": "8.25.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-qwik": "0.11.0",
     "node-fetch": "3.2.10",
     "postcss": "^8.4.18",
