--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "typescript": "4.8.4",
     "vite": "3.1.7",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.4"
   }
 }
