--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint:fix": "eslint ./src --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "prepare": "husky install",
+    "test": "npm run lint:fix"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.11.0",
@@ -30,6 +32,7 @@
     "eslint": "8.25.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-qwik": "0.11.0",
+    "husky": "^8.0.1",
     "node-fetch": "3.2.10",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
