--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "typescript": "4.8.4",
     "vite": "3.1.7",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "swiper": "^8.4.4"
   }
 }
