--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "test": "npm run lint:fix"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.11.0",
+    "@builder.io/qwik": "^0.11.1",
     "@builder.io/qwik-city": "0.0.112",
     "@types/eslint": "8.4.6",
-    "@types/node": "latest",
+    "@types/node": "^18.11.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.1",
     "eslint": "8.25.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-qwik": "0.11.0",
+    "eslint-plugin-qwik": "^0.11.1",
     "husky": "^8.0.1",
     "node-fetch": "3.2.10",
     "postcss": "^8.4.18",
@@ -39,11 +39,10 @@
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4",
     "vite": "3.1.7",
-    "vite-tsconfig-paths": "3.5.0"
+    "vite-tsconfig-paths": "^3.5.1"
   },
   "dependencies": {
     "@stitches/core": "^1.2.8",
-    "@stitches/react": "^1.2.8",
     "swiper": "^8.4.4"
   }
 }
