--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix",
+    "lint": "eslint ./src/**/*.tsx",
+    "lint:fix": "eslint ./src/**/*.tsx --fix",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
@@ -24,25 +24,29 @@
   },
   "devDependencies": {
     "@builder.io/qwik": "^0.11.1",
-    "@builder.io/qwik-city": "0.0.112",
-    "@types/eslint": "8.4.6",
-    "@types/node": "^18.11.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "8.25.0",
+    "@builder.io/qwik-city": "^0.0.112",
+    "@types/eslint": "^8.4.7",
+    "@types/node": "^18.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-qwik": "^0.11.1",
     "husky": "^8.0.1",
     "node-fetch": "3.2.10",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4",
-    "vite": "3.1.7",
-    "vite-tsconfig-paths": "^3.5.1"
+    "vite": "^3.1.8",
+    "vite-tsconfig-paths": "^3.5.2"
   },
   "dependencies": {
     "@stitches/core": "^1.2.8",
+    "@stitches/css": "^9.0.0-alpha.8",
+    "@stitches/tailwind": "^9.0.0-alpha.8",
+    "motion": "^10.14.2",
     "swiper": "^8.4.4"
   }
 }
