--- a/package.json
+++ b/package.json
@@ -23,30 +23,32 @@
     "test": "npm run lint:fix"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.12.1",
-    "@builder.io/qwik-city": "^0.0.118",
-    "@types/eslint": "^8.4.9",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@builder.io/qwik": "^0.15.2",
+    "@builder.io/qwik-city": "^0.0.128",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "@vanilla-extract/css": "^1.9.2",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.26.0",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-qwik": "^0.12.1",
-    "husky": "^8.0.1",
-    "node-fetch": "3.2.10",
-    "postcss": "^8.4.18",
-    "prettier": "2.7.1",
-    "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4",
-    "vite": "^3.2.2",
-    "vite-tsconfig-paths": "^3.5.2"
+    "eslint-plugin-qwik": "^0.15.2",
+    "husky": "^8.0.2",
+    "node-fetch": "^3.3.0",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "styled-vanilla-extract": "^0.5.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vite-tsconfig-paths": "^3.6.0"
   },
   "dependencies": {
     "@stitches/core": "^1.2.8",
     "@stitches/css": "^9.0.0-alpha.8",
     "@stitches/tailwind": "^9.0.0-alpha.8",
     "motion": "^10.14.3",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.5"
   }
 }
