--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "vite-tsconfig-paths": "^4.0.3"
   },
   "dependencies": {
+    "@vanilla-extract/css-utils": "^0.1.3",
+    "@vanilla-extract/dynamic": "^2.0.3",
+    "@vanilla-extract/recipes": "^0.3.0",
+    "@vanilla-extract/sprinkles": "^1.5.1",
     "motion": "^10.15.3",
     "swiper": "^8.4.5"
   }
