--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adaptors/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -16,11 +17,11 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "eslint ./src/**/*.tsx --fix",
+    "prepare": "husky install",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "prepare": "husky install",
-    "test": "npm run lint:fix"
+    "test": "npm run lint:fix",
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^0.16.1",
