--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adaptors/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -18,7 +17,8 @@
     "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "eslint ./src/**/*.tsx --fix",
     "prepare": "husky install",
-    "preview": "qwik build preview && vite preview --open",
+    "preview": "vite preview --open",
+    "preview:static": "npm run build.server && node server/entry.ssr.js",
     "start": "vite --open --mode ssr",
     "test": "npm run lint:fix",
     "qwik": "qwik"
