--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adaptors/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint ./src/**/*.tsx",
     "lint:fix": "eslint ./src/**/*.tsx --fix",
+    "prepare": "husky install",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "prepare": "husky install",
-    "test": "npm run lint:fix"
+    "test": "npm run lint:fix",
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^0.16.1",
@@ -39,6 +41,7 @@
     "prettier": "^2.8.1",
     "styled-vanilla-extract": "^0.5.3",
     "typescript": "^4.9.4",
+    "vercel": "^28.4.17",
     "vite": "^4.0.3",
     "vite-tsconfig-paths": "^4.0.3"
   },
