--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "prettier": "^2.8.1",
     "styled-vanilla-extract": "^0.5.3",
     "typescript": "^4.9.4",
-    "vercel": "^28.10.1",
-    "vite": "^4.0.3",
+    "vercel": "^28.10.2",
+    "vite": "^4.0.4",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "dependencies": {
@@ -54,6 +54,7 @@
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
     "motion": "^10.15.3",
+    "rainbow-sprinkles": "^0.15.1",
     "swiper": "^8.4.5"
   }
 }
