--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "vite": "$vite"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.16.1",
-    "@builder.io/qwik-city": "^0.0.128",
+    "@builder.io/qwik": "^0.16.2",
+    "@builder.io/qwik-city": "^0.1.0-beta8",
     "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
@@ -37,14 +37,14 @@
     "@vanilla-extract/css": "^1.9.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-qwik": "^0.16.1",
+    "eslint-plugin-qwik": "^0.16.2",
     "husky": "^8.0.3",
     "node-fetch": "^3.3.0",
-    "postcss": "^8.4.20",
-    "prettier": "^2.8.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
     "styled-vanilla-extract": "^0.5.3",
     "typescript": "^4.9.4",
-    "vercel": "^28.10.2",
+    "vercel": "^28.10.3",
     "vite": "^4.0.4",
     "vite-tsconfig-paths": "^4.0.3"
   },
