--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
+    "framer-motion": "^8.4.2",
     "motion": "^10.15.3",
     "rainbow-sprinkles": "^0.15.1",
     "swiper": "^8.4.5",
