--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@builder.io/qwik-city": "^0.1.0-beta9",
     "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "@vanilla-extract/css": "^1.9.2",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -49,6 +49,7 @@
     "vite-tsconfig-paths": "^4.0.3"
   },
   "dependencies": {
+    "@auth/core": "^0.2.5",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.3.0",
