--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite": "$vite"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.7.0",
     "@builder.io/qwik": "^0.16.2",
     "@builder.io/qwik-city": "^0.1.0-beta9",
     "@types/eslint": "^8.4.10",
