--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
+    "@vanilla-extract/vite-plugin": "^3.7.0",
     "framer-motion": "^8.4.3",
     "motion": "^10.15.5",
     "rainbow-sprinkles": "^0.15.1",
