--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^4.9.4",
     "vercel": "^28.12.4",
     "vite": "^4.0.4",
+    "vite-imagetools": "^4.0.15",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "dependencies": {
