--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vanilla-extract/css": "^1.9.2",
+    "autoprefixer": "10.4.11",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-qwik": "^0.16.2",
     "husky": "^8.0.3",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.16",
     "prettier": "^2.8.3",
     "styled-vanilla-extract": "^0.5.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.9.4",
     "vercel": "^28.12.8",
     "vite": "^4.0.4",
