--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vite": "$vite"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.7.4",
+    "@builder.io/partytown": "^0.7.5",
     "@builder.io/qwik": "^0.16.2",
     "@builder.io/qwik-city": "^0.1.0-beta9",
     "@types/eslint": "^8.4.10",
@@ -36,17 +36,17 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vanilla-extract/css": "^1.9.2",
-    "autoprefixer": "10.4.11",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-qwik": "^0.16.2",
     "husky": "^8.0.3",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "styled-vanilla-extract": "^0.5.4",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
-    "vercel": "^28.12.8",
+    "vercel": "^28.13.0",
     "vite": "^4.0.4",
     "vite-imagetools": "^4.0.15",
     "vite-tsconfig-paths": "^4.0.5"
