--- a/package.json
+++ b/package.json
@@ -29,40 +29,40 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.7.5",
-    "@builder.io/qwik": "^0.16.2",
-    "@builder.io/qwik-city": "^0.1.0-beta9",
-    "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "@vanilla-extract/css": "^1.9.3",
+    "@builder.io/qwik": "0.17.3",
+    "@builder.io/qwik-city": "0.1.0-beta13",
+    "@types/eslint": "^8.21.0",
+    "@types/node": "^18.11.19",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "@vanilla-extract/css": "^1.9.4",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.32.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-plugin-qwik": "^0.16.2",
+    "eslint-plugin-qwik": "^0.17.4",
     "husky": "^8.0.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "styled-vanilla-extract": "^0.5.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vercel": "^28.13.0",
-    "vite": "^4.0.4",
-    "vite-imagetools": "^4.0.16",
+    "typescript": "^4.9.5",
+    "vercel": "^28.15.1",
+    "vite": "^4.1.1",
+    "vite-imagetools": "^4.0.18",
     "vite-tsconfig-paths": "^4.0.5"
   },
   "dependencies": {
-    "@auth/core": "^0.2.5",
+    "@auth/core": "^0.4.0",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
     "@vanilla-extract/vite-plugin": "^3.7.1",
     "clsx": "^1.2.1",
-    "framer-motion": "^8.5.2",
+    "framer-motion": "^9.0.1",
     "motion": "^10.15.5",
     "rainbow-sprinkles": "^0.15.1",
-    "swiper": "^8.4.6",
-    "undici": "^5.16.0"
+    "swiper": "^9.0.3",
+    "undici": "^5.18.0"
   }
 }
