--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "motion": "^10.15.5",
     "rainbow-sprinkles": "^0.16.0",
     "swiper": "^9.1.0",
-    "undici": "^5.20.0"
+    "undici": "^5.20.0",
+    "zustand": "^4.3.6"
   }
 }
