--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "rainbow-sprinkles": "^0.16.0",
     "swiper": "^9.1.0",
     "undici": "^5.20.0",
+    "zod": "^3.21.4",
     "zustand": "^4.3.6"
   }
 }
